--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -933,7 +933,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=y
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 CONFIG_NETFILTER_XT_MATCH_CLUSTER=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
-CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
+# CONFIG_NETFILTER_XT_MATCH_CONNBYTES is not set
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
@@ -3325,7 +3325,7 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-CONFIG_ECRYPT_FS=y
+# CONFIG_ECRYPT_FS is not set
 CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
@@ -3697,7 +3697,7 @@ CONFIG_CGROUP_MEM_RES_CTLR_KMEM=y
 CONFIG_IPC_NS=y
 CONFIG_DEBUG_RODATA=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_ECRYPT_FS_MESSAGING=y
+# CONFIG_ECRYPT_FS_MESSAGING is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_VT_CONSOLE=y
 CONFIG_SECURITY_SMACK=y
